# presence-mcp

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: check_versions.py
src/presence_mcp/: __main__.py  launcher.py
tests/: test_launcher.py
